[gd_scene load_steps=2 format=3 uid="uid://dmsrpbpete03w"]

[ext_resource type="Script" path="res://scenes/levels/main_menu/options_menu.gd" id="1_fl57t"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fl57t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 5
popup/item_0/text = "3840x2160"
popup/item_0/id = 1
popup/item_1/text = "2560x1440"
popup/item_1/id = 4
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "1600x900"
popup/item_3/id = 3
popup/item_4/text = "1280x720"
popup/item_4/id = 4

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
